--- a/Practical1.ipynb
+++ b/Practical1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3b7ffd67-b76d-4f1d-9aee-36994cbf85e6",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7a1e14b1-7498-4b1d-8fc4-1e726de94854",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d84cca7c-55f4-45af-8d01-85d0ce10c175",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d3dcd5a2-ef84-43db-84b6-208244a873e2",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "[1025 rows x 14 columns]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b6b0d234-3257-4aaf-971b-748f99276862",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9d806093-0d1c-48e8-98ad-52329117cbc4",
    "metadata": {},
    "outputs": [],
@@ -113,8 +113,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cbce08d8-f82c-4e4f-ac29-fcf744458a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(257, 5)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape\n",
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4cce8870-7d09-44bc-9dca-114182847c86",
    "metadata": {},
    "outputs": [
     {
@@ -129,34 +151,12 @@
     }
    ],
    "source": [
-    "X_train.shape\n",
     "X_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4cce8870-7d09-44bc-9dca-114182847c86",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(257, 5)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ecdec388-a44b-4b4e-a352-869a937b13db",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "(768, 5)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e2a06e8a-7d09-4137-be22-5ba3d0184066",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1242d3aa-eec7-4bb5-895b-8767127f2677",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7d709467-d87c-4d82-a3cf-f95964f967c4",
    "metadata": {},
    "outputs": [
@@ -254,29 +254,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1510b79d-7e65-48ea-bdf8-e8257458da11",
+   "execution_count": 15,
+   "id": "caff1d02-53cd-4c8a-9627-ba0a789e4eb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1025, 14)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.head\n"
+    "df.shape"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0e9eaa0-df40-4ac9-aad7-5b4fc4c484e2",
+   "cell_type": "markdown",
+   "id": "a0eb6526-7f3d-44ca-be4f-fed05367e4ad",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caff1d02-53cd-4c8a-9627-ba0a789e4eb3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
