--- a/Practical1.ipynb
+++ b/Practical1.ipynb
@@ -2,27 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "736683ca-e9bc-4bad-a04a-620ea0075398",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
-   "id": "3b7ffd67-b76d-4f1d-9aee-36994cbf85e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "7a1e14b1-7498-4b1d-8fc4-1e726de94854",
    "metadata": {},
    "outputs": [],
@@ -35,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d84cca7c-55f4-45af-8d01-85d0ce10c175",
    "metadata": {},
    "outputs": [],
@@ -45,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d3dcd5a2-ef84-43db-84b6-208244a873e2",
    "metadata": {},
    "outputs": [
@@ -81,7 +61,7 @@
        "[1025 rows x 14 columns]>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b6b0d234-3257-4aaf-971b-748f99276862",
    "metadata": {},
    "outputs": [],
@@ -102,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9d806093-0d1c-48e8-98ad-52329117cbc4",
    "metadata": {},
    "outputs": [],
@@ -113,8 +93,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "cbce08d8-f82c-4e4f-ac29-fcf744458a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(257, 5)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape\n",
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4cce8870-7d09-44bc-9dca-114182847c86",
    "metadata": {},
    "outputs": [
     {
@@ -129,34 +131,12 @@
     }
    ],
    "source": [
-    "X_train.shape\n",
     "X_test.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4cce8870-7d09-44bc-9dca-114182847c86",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(257, 5)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "ecdec388-a44b-4b4e-a352-869a937b13db",
    "metadata": {},
    "outputs": [
@@ -166,7 +146,7 @@
        "(768, 5)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e2a06e8a-7d09-4137-be22-5ba3d0184066",
    "metadata": {},
    "outputs": [
@@ -208,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1242d3aa-eec7-4bb5-895b-8767127f2677",
    "metadata": {},
    "outputs": [
@@ -229,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7d709467-d87c-4d82-a3cf-f95964f967c4",
    "metadata": {},
    "outputs": [
@@ -254,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "caff1d02-53cd-4c8a-9627-ba0a789e4eb3",
    "metadata": {},
    "outputs": [
@@ -264,7 +244,7 @@
        "(1025, 14)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,8 +258,76 @@
    "id": "a0eb6526-7f3d-44ca-be4f-fed05367e4ad",
    "metadata": {},
    "source": [
-    "# "
+    "df.columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d876c008-b82b-46d3-923c-3b9b8296595a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1025, 14)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "72b2f147-4288-463e-a047-448e89b90b6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['age', 'sex', 'cp', 'trestbps', 'chol', 'fbs', 'restecg', 'thalach',\n",
+       "       'exang', 'oldpeak', 'slope', 'ca', 'thal', 'target'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19baa08c-110b-4195-b737-f188c7aada5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6fce50d-4cf7-4522-90c6-930ea6ea0bbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "795efc73-4719-49e1-b753-0768912fc4ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
